[package]
name = "exmap"
version = "0.0.1"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/jordanisaacs/exmap"
repository = "https://github.com/jordanisaacs/exmap"
description = "A low-level `exmap` userpace interface for Rust"
# TODO: re-enable when good readme
readme = false

include = ["/src", "LICENSE"]


[lib]
name = "exmap"
path = "src/lib.rs"

[[bin]]
name = "exmap"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc = { version = "0.2.7"}
rustix = {version = "0.36.5", features = ["mm", "fs"]}
thiserror = "1.0.38"

[build-dependencies]
bindgen = "0.63.0"
